--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,7 @@
   <link rel="icon" href="text-box.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="textUtilz is a utility site where you can manipulate your text as required." />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <meta name="description" content="textUtils is a word counter and character counter utility site where you can manipulate your text as required. In textUtils you can convert your text from Uppercase to Lowercase, Lowercase to Uppercase, Remove extra spaces and many other things." />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -25,7 +24,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/css/bootstrap.min.css"
     integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
-  <title>textUtilz</title>
+  <title>textUtilz-Home | Uppercase to Lowercase | Lowercase to Uppercase | Remove extra spaces.</title>
 </head>
 
 <body>
